# sink

./: CMakeLists.txt
src/: sink.c
